improved status on mute

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -79,8 +79,8 @@ disk "/home" {
 }
 
 volume master {
-    format = "☊ %volume"
-    format_muted = "☊ MUTE"
+    format = " %volume"
+    format_muted = "   %volume"
     device = "default"
     mixer = "Master"
     mixer_idx = 0
