--- a/i3/config
+++ b/i3/config
@@ -269,11 +269,11 @@ bar {
     colors {
         background          $bg
         statusline          $fg
-        separator           $hi
-        focused_workspace   $gn        $bg        $ac
+        separator           $tx
+        focused_workspace   $ia        $bg        $ia
         active_workspace    $gn        $ac        $tx
-        inactive_workspace  $bg        $bg        $ia
-        urgent_workspace    $rd        $bg        $ac
+        inactive_workspace  $bg        $ia        $tx
+        urgent_workspace    $rd        $bg        $rd
     }
 }
 
