--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -31,7 +31,7 @@ order += "load"
 order += "tztime local"
 
 wireless wlp3s0 {
-    format_up = "%essid %ip ‣ %quality"
+    format_up = " %essid %ip ‣ %quality"
     format_down = ""
 }
 
@@ -42,7 +42,7 @@ ethernet enp0s25 {
 }
 
 battery 0 {
-    format = "⚡ %status %percentage %remaining"
+    format = " %status %percentage %remaining"
     last_full_capacity = true
 }
 
@@ -55,32 +55,32 @@ run_watch VPN {
 }
 
 tztime local {
-    format = "%A %e.%B ⌚ %H:%M:%S"
+    format = "%A %e.%B  %H:%M:%S"
 }
 
 load {
-    format = "☢ %1min"
+    format = " %1min"
 }
 
 cpu_usage {
-    format = "↺ %usage "
+    format = " %usage "
 }
 
 cpu_temperature 0 {
-    format = "⌘ %degrees°C "
+    format = " %degrees°C "
 }
 
 disk "/" {
-    format = "√ %free"
+    format = " %free"
 }
 
 disk "/home" {
-    format = "⌂ %free"
+    format = " %free"
 }
 
 volume master {
-    format = " %volume"
-    format_muted = "   %volume"
+    format = " %volume"
+    format_muted = "  %volume"
     device = "default"
     mixer = "Master"
     mixer_idx = 0
