--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -42,8 +42,13 @@ ethernet enp0s25 {
 }
 
 battery 0 {
-    format = " %status %percentage %remaining"
+    #format = " %status %percentage %remaining"
+    #hide_seconds = true
+    format = " %status %percentage"
     last_full_capacity = true
+    integer_battery_capacity = true
+    low_threshold = 33
+    threshold_type = percentage
 }
 
 run_watch DHCP {
@@ -80,7 +85,7 @@ disk "/home" {
 
 volume master {
     format = " %volume"
-    format_muted = "  %volume"
+    format_muted = " %volume"
     device = "default"
     mixer = "Master"
     mixer_idx = 0
