--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -42,9 +42,9 @@ ethernet enp0s25 {
 }
 
 battery 0 {
-    #format = " %status %percentage %remaining"
+    format = " %status %percentage %remaining"
     #hide_seconds = true
-    format = " %status %percentage"
+    format_down = ""
     last_full_capacity = true
     integer_battery_capacity = true
     low_threshold = 33
