--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -13,7 +13,9 @@ general {
     color_good      = '#88b090'
     color_degraded  = '#ccdc90'
     color_bad       = '#e89393'
+    #separator_block_width = 25
     interval = 1
+    #separator = false
 }
 
 order += "volume master"
@@ -42,13 +44,16 @@ ethernet enp0s25 {
 }
 
 battery 0 {
-    format = " %status %percentage %remaining"
-    #hide_seconds = true
+    format = "%status %percentage %remaining"
     format_down = ""
     last_full_capacity = true
     integer_battery_capacity = true
     low_threshold = 33
     threshold_type = percentage
+    hide_seconds = true
+    status_chr = " "
+    status_bat = " "
+    status_full = " "
 }
 
 run_watch DHCP {
