--- a/i3/config
+++ b/i3/config
@@ -14,10 +14,11 @@ set $psst --no-startup-id
 set $update && killall -SIGUSR1 i3status
 #set unmute &&
 
+new_window          none
+#new_window          normal
+new_float           pixel 3
+hide_edge_borders   none
 bindsym $mod+b border toggle
-new_window  pixel 0 px
-new_float   normal 3 px
-#hide_edge_borders both
 
 # autostart
 exec $psst feh --bg-scale ~/img/deathstar.png
@@ -39,9 +40,13 @@ floating_modifier $mod
 
 # kill focused window
 bindsym $mod+Shift+q    kill
+bindsym $mod+Shift+w    exec xkill
+
+# rename workspace
+#bindsym Ctrl+Shift+r exec i3-input -F 'rename workspace to "%s"' -P 'rename current workspace: '
 
 # start customized dmenu for launching any program
-bindsym $mod+d exec dmenu_run -i -l 23 -p 'gogo Gadget' -fn 'Source Code Pro for Powerline:bold:pixelsize=32' -nb '#222222' -nf '#ceecee' -sb '#f8f893' -sf '#222222'
+bindsym $mod+d exec $psst dmenu_run -i -l 23 -p 'gogo Gadget' -fn 'Source Code Pro for Powerline:bold:pixelsize=32' -nb '#222222' -nf '#ceecee' -sb '#f8f893' -sf '#222222'
 
 # change focus (vim style)
 bindsym $mod+h focus left
@@ -225,19 +230,18 @@ set $be     #8faf9f
 set $yw     #ccdc90
 set $gn     #88b090
 set $rd     #e89393
-set $id     #004c4c
+set $id     #666666
 set $ce     #ceecee
 
 # set some nice colors      border  background  text    indicator
-client.focused              $ac     $ac         $tx     $id
+client.focused              $id     $ac         $tx     $id
 client.unfocused            $bg     $bg         $ia     $id
 client.focused_inactive     $bg     $bg         $ac     $id
 client.urgent               $rd     $rd         $tx     $id
-#border & incicator are ignored
+#border & indicator are ignored
 #client.placeholder          $bg     $bg         $bg     $bg
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Start i3bar to display a workspace bar
 bar {
     strip_workspace_numbers yes
     #tray_output none
@@ -252,7 +256,7 @@ bar {
     colors {
         background          $bg
         statusline          $fg
-        separator           $id
+        separator           $bg
         focused_workspace   $ia        $bg        $ia
         active_workspace    $gn        $ac        $tx
         inactive_workspace  $bg        $ia        $tx
@@ -265,7 +269,6 @@ for_window [class="Ddd" instance="^(?!command_shell$)"] floating enable
 for_window [title="Event Tester"] floating enable   # xev
 for_window [class="Speedcrunch"] floating enable
 for_window [instance="TeamViewer.exe"] floating enable
-for_window [instance="xfce4-notifyd"] floating enable, border none
 for_window [class="Audacious"] floating enable, border none
 for_window [instance="pcalc.exe"] floating enabled
 for_window [class="^(?i)chromium"] border none
@@ -287,9 +290,9 @@ for_window [instance="rainlendar"] move scratchpad
 bindsym $sup+a exec audacious
 bindsym $sup+b exec ~/develop/scripts/vbox-start.sh
 #bindsym $sup+c exec speedcrunch
-#bindsym $sup+c exec wine "C:\\Program Files (x86)\\analogx\\PCalc\\pcalc.exe"
+bindsym $sup+c exec wine "C:\\Program Files (x86)\\analogx\\PCalc\\pcalc.exe"
 #bindsym $sup+c exec urxvtc -e sage floating enable; resize shrink width 120 px; resize shrink height 50 px
-bindsym $sup+c exec urxvtc -e sage
+#bindsym $sup+c exec urxvtc -e sage
 #bindsym $sup+d
 bindsym $sup+e exec thunderbird
 bindsym $sup+f exec pcmanfm
@@ -330,8 +333,8 @@ bindsym $sup+1 exec "forticlientsslvpn_cli --server vpn.bbzsogr.ch:443 --vpnuser
 bindsym $sup+0 exec urxvtc, focus, floating enable
 
 # screenshot & open in gimp
-bindsym Print exec scrot -e 'mv $f /tmp/ && gimp /tmp/$f'
-bindsym $mod+Print exec scrot -s -e 'mv $f /tmp/ && gimp /tmp/$f'
+bindsym Ctrl+Print exec scrot -e 'mv $f /tmp/ && gimp /tmp/$f'
+bindsym Mod1+Print exec scrot -s -e 'mv $f /tmp/ && gimp /tmp/$f' --release
 
 # remote desktop
 bindsym $sup+5 exec "rdesktop -f -g 1920x1080 -P -z -x l -r sound:off -u 'GRAPH-TECH\can' gt-server5:3389"
