shorter WLAN string

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -33,7 +33,7 @@ order += "load"
 order += "tztime local"
 
 wireless wlp3s0 {
-    format_up = " %essid %ip ‣ %quality"
+    format_up = "%essid %ip  %quality"
     format_down = ""
 }
 
