--- a/i3/config
+++ b/i3/config
@@ -145,6 +145,7 @@ bindsym $mod+Shift+9 move container to workspace $w9
 bindsym $mod+Shift+0 move container to workspace $w0
 
 # always open some programs on specified workspace
+assign [class="Firefox"]    $w2
 assign [class="Chromium"]    $w2
 assign [class="Thunderbird"] $w3
 assign [class="QtCreator"]   $w4
@@ -319,7 +320,7 @@ bindsym $sup+i exec inkscape
 bindsym $sup+k exec wireshark
 bindsym $sup+l exec libreoffice
 bindsym $sup+m exec mixxx
-#bindsym $sup+n
+bindsym $sup+n exec xset -dpms && google-chrome-stable --kiosk && xset +dpms
 #bindsym $sup+o
 #bindsym $sup+p exec "xrandr --output HDMI1 --auto && xrandr --output LVDS1 --off"
 #bindsym $sup+Shift+p exec "xrandr --output LVDS1 --auto"
@@ -329,7 +330,8 @@ bindsym $sup+s exec "rofi -snow -terminal urxvtc"
 bindsym $sup+t exec $psst ~/develop/scripts/start-teamviewer.sh
 #bindsym $sup+u exec $psst optirun uzbl-browser
 bindsym $sup+v exec vlc
-bindsym $sup+w exec chromium
+#bindsym $sup+w exec chromium
+bindsym $sup+w exec firefox-developer
 bindsym $sup+x exec keepassx
 bindsym $sup+y exec system-config-printer
 bindsym $sup+z exec filezilla
