--- a/firefox/.vimperatorrc
+++ b/firefox/.vimperatorrc
@@ -1,5 +1,28 @@
 # use alphabet for link shortcuts
-set hintchars=hjklasdfgyuiopqwertnmzxcvb
+set hintchars=hjklsadfgqwertyuiopzxcvbnm
+
+# keyboard shortcuts with numbers for first tabs
+noremap <C-1> 1gt
+noremap <leader>1 1gt
+noremap <C-2> 2gt
+noremap <leader>2 2gt
+noremap <C-3> 3gt
+noremap <leader>3 3gt
+noremap <C-4> 4gt
+noremap <leader>4 4gt
+noremap <C-5> 5gt
+noremap <leader>5 5gt
+
+# switch through tabs
+noremap <left> <C-p>
+noremap <right> <C-n>
+
+# back to the future
+noremap <PageUp> :back<cr>
+noremap <PageDown> :forward<cr>
+
+# reload config
+map <leader>s :source ~/.vimperatorrc<cr>
 
 # beautify link highlights
 highlight Hint font-size:200%;color:#ceecee;background-color:#2e2e2e;padding:2px;
