--- a/i3/config
+++ b/i3/config
@@ -14,10 +14,10 @@ set $psst --no-startup-id
 set $update && killall -SIGUSR1 i3status
 #set unmute &&
 
-new_window          none
+new_window          pixel 1
 #new_window          normal
 new_float           pixel 3
-hide_edge_borders   none
+hide_edge_borders   both
 bindsym $mod+b border toggle
 
 # autostart
@@ -233,7 +233,7 @@ mode "caps" {
         bindsym $mod+Caps_Lock mode "default"
 }
 
-# ceerious styled i3
+# ceeriously styled i3
 set $bg     #2c2c2e
 set $fg     #9f9f9f
 set $hi     #efef8f
@@ -291,9 +291,11 @@ for_window [class="Thunderbird"] border none
 #for_window [class="Thunderbird" instance="Mail"] border none
 for_window [instance="Msgcompose"] floating enable border normal
 for_window [class="rdesktop"] fullscreen
-for_window [class="URxvt"] border none
+for_window [class="URxvt"] border pixel 1
 for_window [class="URxvt" title="sage"] floating enable border pixel 3
 for_window [title="^Dia v"] resize shrink width 33 px
+for_window [class="Cssh"] floating enable
+for_window [class="XTerm" title="^CSSH"] border normal
 
 #bindsym $mod+Shift+z floating enable; resize grow width 1920 px; resize grow height 500 px; move position center; move scratchpad
 
@@ -321,6 +323,7 @@ bindsym $sup+k exec wireshark
 bindsym $sup+l exec libreoffice
 bindsym $sup+m exec mixxx
 bindsym $sup+n exec xset -dpms && google-chrome-stable --kiosk && xset +dpms
+
 #bindsym $sup+o
 #bindsym $sup+p exec "xrandr --output HDMI1 --auto && xrandr --output LVDS1 --off"
 #bindsym $sup+Shift+p exec "xrandr --output LVDS1 --auto"
