xdo-open for known extensions

--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -76,13 +76,18 @@ ext x?html?, has lynx,            terminal = lynx -- "$@"
 ext x?html?, has w3m,             terminal = w3m "$@"
 
 #-------------------------------------------
+# Open depending on MIME info
+#-------------------------------------------
+has xdg-open, flag f = xdg-open "$1"
+
+#-------------------------------------------
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
 mime ^text,  label editor = "$EDITOR" -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|csv|tex|py|pl|rb|sh|php = "$EDITOR" -- "$@"
-!mime ^text, label pager,  ext xml|csv|tex|py|pl|rb|sh|php = "$PAGER" -- "$@"
+!mime ^text, label editor, ext xml|csv|tex|py|pl|rb|sh|php|md = "$EDITOR" -- "$@"
+!mime ^text, label pager,  ext xml|csv|tex|py|pl|rb|sh|php|md = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
 ext s[wmf]c, has zsnes, X     = zsnes "$1"
