--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -53,7 +53,7 @@ battery 0 {
     hide_seconds = true
     status_chr = " "
     status_bat = " "
-    status_full = " "
+    status_full = " "
 }
 
 run_watch DHCP {
