--- a/i3/config
+++ b/i3/config
@@ -27,6 +27,7 @@ exec $psst urxvtd -q -o -f
 #exec $psst urxvtc
 exec $psst "xbacklight -set 33"
 exec $psst "xflux -l 47.2 -g 7.5"
+#exec $psst 'urxvt -e bash -c "tmux -q has-session && exec tmux attach-session -d || exec tmux new-session -n$USER -s$USER@$HOSTNAME"'
 
 # Open a small terminal at startup
 #exec --no-startup-id urxvt -name urxvt_scratchpad --geometry 70x15
@@ -149,7 +150,6 @@ assign [class="Firefox"]    $w2
 assign [class="Chromium"]    $w2
 assign [class="Thunderbird"] $w3
 assign [class="QtCreator"]   $w4
-assign [class="Audacious"]   $w9
 assign [class="VirtualBox"]  $w0
 
 # reload the configuration file
@@ -312,7 +312,7 @@ bindsym $sup+b exec brasero
 #bindsym $sup+c exec speedcrunch
 bindsym $sup+c exec wine "C:\\Program Files (x86)\\analogx\\PCalc\\pcalc.exe"
 #bindsym $sup+c exec urxvtc -e sage floating enable; resize shrink width 120 px; resize shrink height 50 px
-#bindsym $sup+d
+bindsym $sup+d exec cssh
 bindsym $sup+e exec thunderbird
 bindsym $sup+f exec pcmanfm
 bindsym $sup+g exec gimp
@@ -324,7 +324,7 @@ bindsym $sup+l exec libreoffice
 bindsym $sup+m exec mixxx
 bindsym $sup+n exec xset -dpms && google-chrome-stable --kiosk && xset +dpms
 
-#bindsym $sup+o
+bindsym $sup+o exec /opt/ti/ccsv6/eclipse/ccstudio
 #bindsym $sup+p exec "xrandr --output HDMI1 --auto && xrandr --output LVDS1 --off"
 #bindsym $sup+Shift+p exec "xrandr --output LVDS1 --auto"
 bindsym $sup+q exec qtcreator
@@ -362,9 +362,9 @@ bindsym Mod1+Print exec scrot -s -e 'mv $f /tmp/ && gimp /tmp/$f' --release
 # Specialkeys
 bindsym XF86ScreenSaver         exec $psst ~/.i3/i3exit.sh lock
 bindsym XF86Sleep               exec $psst ~/.i3/i3exit.sh suspend
-bindsym XF86AudioPlay           exec audacious -t
-bindsym XF86AudioNext           exec audacious -fp
-bindsym XF86AudioPrev           exec audacious -rp
+#bindsym XF86AudioPlay           exec audacious -t
+#bindsym XF86AudioNext           exec audacious -fp
+#bindsym XF86AudioPrev           exec audacious -rp
 bindsym XF86AudioLowerVolume    exec $psst pactl set-sink-volume @DEFAULT_SINK@ -- -5% && pactl set-sink-mute @DEFAULT_SINK@ 0 $update
 bindsym XF86AudioRaiseVolume    exec $psst pactl set-sink-volume @DEFAULT_SINK@ -- +5% && pactl set-sink-mute @DEFAULT_SINK@ 0 $update
 bindsym XF86AudioMute           exec $psst pactl set-sink-mute @DEFAULT_SINK@ toggle $update
@@ -375,4 +375,8 @@ bindsym XF86Launch1             exec $psst speedcrunch
 # list open windows to switch to
 bindsym $mod+Tab exec rofi -i3 -now -font "Inconsolata-10" -fg "#9f9f9f" -bg "#2c2c2e" -hlfg "#2c2c2e" -hlbg "#ccdc90" -o 85
 
+# Open a small terminal at startup
+#exec --no-startup-id urxvt -name urxvt_scratchpad --geometry 70x15
 
+# Workaround size&position
+#for_window [instance="urxvt_scratchpad"] floating enable; move scratchpad; scratchpad show; move position 865px 512px; move scratchpad
