Mouse support for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,10 +5,16 @@
 set -g default-terminal "screen-256color"
 bind r source-file ~/.tmux.conf \; display "OKAY, I'M RELOADED!!!"
 
+set -g history-limit 6000
+
 setw -g mode-keys vi
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
 # sane scrolling
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g terminal-overrides 'screen*,xterm*:smcup@:rmcup@'
 
 # I'm never in a hurry I'm just moving fast.
 set -s escape-time 0
@@ -103,4 +109,4 @@ set -g pane-active-border-fg blue
 bind P pipe-pane -o "cat >>~/#W.log" \; display "toggled logging to ~/#W.log"
 
 # send to all panes simultaneously
-bind C-s set-window-option synchronize-panes
+bind S set-window-option synchronize-panes
