--- a/i3/config
+++ b/i3/config
@@ -22,7 +22,7 @@ bindsym $mod+b border toggle
 exec $psst feh --bg-scale ~/img/deathstar.png
 exec $psst urxvtd -q -o -f
 exec $psst "xbacklight -set 33"
-exec $psst "xflux -l 47.2 -g 7.5"
+exec $psst redshift
 #exec $psst 'urxvt -e bash -c "tmux -q has-session && exec tmux attach-session -d || exec tmux new-session -n$USER -s$USER@$HOSTNAME"'
 
 # Open a small terminal at startup
@@ -32,10 +32,10 @@ exec $psst "xflux -l 47.2 -g 7.5"
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
 #font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-#font pango: Inconsolata 10
+font pango: Inconsolata 10
 #font pango:DejaVu Sans Mono 8
 #font pango:Droid Sans, FontAwesome 9
-font pango:Source Code Pro for Powerline 10px
+#font pango:Source Code Pro for Powerline 14px
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -48,7 +48,7 @@ bindsym $mod+Shift+w    exec "xterm -e xkill"
 #bindsym Ctrl+Shift+r exec i3-input -F 'rename workspace to "%s"' -P 'rename current workspace: '
 
 # start customized dmenu for launching any program
-bindsym $mod+d exec $psst dmenu_run -i -l 23 -p 'gogo Gadget' -fn 'Source Code Pro for Powerline:bold:pixelsize=32' -nb '#222222' -nf '#ceecee' -sb '#f8f893' -sf '#222222'
+bindsym $mod+d exec $psst dmenu_run -i -l 44 -p 'gogo Gadget' -fn 'Inconsolata:bold:pixelsize=26' -nb '#222222' -nf '#ceecee' -sb '#f8f893' -sf '#222222'
 
 # change focus (vim style)
 bindsym $mod+h focus left
@@ -230,7 +230,7 @@ mode "caps" {
 }
 
 # ceeriously styled i3
-set $bg     #2c2c2e
+set $bg     #2c2c2c
 set $fg     #9f9f9f
 set $hi     #efef8f
 set $ac     #a0afa0
@@ -242,6 +242,7 @@ set $gn     #88b090
 set $rd     #e89393
 set $id     #666666
 set $ce     #ceecee
+set $sl     #7f7f7f
 
 # set some nice colors      border  background  text    indicator
 client.focused              $id     $ac         $tx     $id
@@ -255,7 +256,8 @@ client.urgent               $yw     $yw         $tx     $id
 bar {
     strip_workspace_numbers yes
     #tray_output none
-    font pango:Source Code Pro for Powerline, FontAwesome 11
+    font pango:Inconsolata, FontAwesome 17
+    #font pango:Source Code Pro for Powerline, FontAwesome 16
     position top
 
     status_command i3status --config ~/.i3/i3status.conf
@@ -264,8 +266,8 @@ bar {
     #status_command ~/.i3/i3-conky-initscript.sh
 
     colors {
-        background          $bg
-        statusline          $fg
+	background          $bg
+	statusline          $sl
         separator           $bg
         focused_workspace   $ia        $bg        $ia
         active_workspace    $gn        $ac        $tx
@@ -315,14 +317,15 @@ bindsym $sup+g exec gimp
 bindsym $sup+h exec hterm
 bindsym $sup+i exec inkscape
 #bindsym $sup+j
-bindsym $sup+k exec wireshark
+bindsym $sup+k exec wireshark-qt -style=gtk
 bindsym $sup+l exec libreoffice
 bindsym $sup+m exec mixxx
 bindsym $sup+n exec xset -dpms && google-chrome-stable --kiosk && xset +dpms
 
 bindsym $sup+o exec /opt/ti/ccsv6/eclipse/ccstudio
-#bindsym $sup+p exec "xrandr --output HDMI1 --auto && xrandr --output LVDS1 --off"
-#bindsym $sup+Shift+p exec "xrandr --output LVDS1 --auto"
+#bindsym $sup+p exec "xrandr --output DPI1 --auto && xrandr --output LVDS1 --off"
+bindsym $sup+p exec "xrandr --output DP1 --auto"
+bindsym $sup+Shift+p exec "xrandr --output eDP1 --auto && xrandr --output DP1 --off"
 bindsym $sup+q exec qtcreator
 bindsym $sup+r exec urxvtc -e ranger --selectfile=`xcwd`
 bindsym $sup+s exec "rofi -snow -bg '#2f4f4f' -fg '#ccdc90' -terminal urxvtc"
@@ -335,7 +338,7 @@ bindsym $sup+x exec keepassx
 bindsym $sup+y exec system-config-printer
 bindsym $sup+z exec filezilla
 
-bindsym $mod+Return exec urxvtc
+bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+Return exec urxvtc --chdir `xcwd`
 #bindsym $mod+Shift+Return exec urxvtc --chdir ${PWD}
 bindsym $sup+1 exec "urxvt -e forticlientsslvpn_cli --server vpn.bbzsogr.ch:443 --vpnuser cyril.andreatta"
