--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,6 @@ set $mod Mod1
 set $sup Mod4
 set $psst --no-startup-id
 set $update && killall -SIGUSR1 i3status
-#set unmute &&
 
 new_window          pixel 1
 #new_window          normal
@@ -19,10 +18,12 @@ hide_edge_borders   both
 bindsym $mod+b border toggle
 
 # autostart
-exec $psst feh --bg-scale ~/img/deathstar.png
-exec $psst urxvtd -q -o -f
-exec $psst "xbacklight -set 33"
+#exec $psst urxvtd -q -o -f
+exec $psst xmodmap ~/.Xmodmap
 exec $psst redshift
+exec $psst "xbacklight -set 33"
+exec $psst feh --bg-scale ~/img/deathstar.png
+exec $psst xautolock -time 5 -locker 'i3lock -i ~/img/vim-dark.png' &
 #exec $psst 'urxvt -e bash -c "tmux -q has-session && exec tmux attach-session -d || exec tmux new-session -n$USER -s$USER@$HOSTNAME"'
 
 # Open a small terminal at startup
@@ -142,8 +143,7 @@ bindsym $mod+Shift+9 move container to workspace $w9
 bindsym $mod+Shift+0 move container to workspace $w0
 
 # always open some programs on specified workspace
-assign [class="Firefox"]    $w2
-assign [class="Chromium"]    $w2
+assign [class="Firefox"]     $w2
 assign [class="Thunderbird"] $w3
 assign [class="QtCreator"]   $w4
 assign [class="VirtualBox"]  $w0
@@ -254,25 +254,26 @@ client.urgent               $yw     $yw         $tx     $id
 
 # Start i3bar to display a workspace bar
 bar {
+    position top
     strip_workspace_numbers yes
     #tray_output none
-    font pango:Inconsolata, FontAwesome 17
-    #font pango:Source Code Pro for Powerline, FontAwesome 16
-    position top
+    #font pango:Inconsolata, FontAwesome 15
+    font pango:Source Code Pro for Powerline, FontAwesome 14
+	separator_symbol "⋆"
 
-    status_command i3status --config ~/.i3/i3status.conf
+    #status_command i3status --config ~/.i3/i3status.conf
     # use patched i3status
-    #status_command ~/src/i3status/i3status --config ~/.i3/i3status.conf
+    status_command ~/src/i3status/i3status --config ~/.i3/i3status.conf
     #status_command ~/.i3/i3-conky-initscript.sh
 
     colors {
-	background          $bg
-	statusline          $sl
-        separator           $bg
-        focused_workspace   $ia        $bg        $ia
-        active_workspace    $gn        $ac        $tx
-        inactive_workspace  $bg        $ia        $tx
-        urgent_workspace    $yw        $bg        $yw
+		background          $bg
+		statusline          $sl
+		separator           $id
+		focused_workspace   $ia        $bg        $ia
+		active_workspace    $gn        $ac        $tx
+		inactive_workspace  $bg        $ia        $tx
+		urgent_workspace    $yw        $bg        $yw
     }
 }
 
@@ -301,17 +302,17 @@ for_window [class="XTerm" title="^xkill"] floating enabled border pixel 1
 #scratchpads
 bindsym $mod+Shift+Super_L move scratchpad
 bindsym $mod+Super_L scratchpad show
-for_window [instance="rainlendar"] move scratchpad
 for_window [title="^forticlientsslvpn"] move scratchpad show
 
 # My favorite programs
 bindsym $sup+a exec audacious
 bindsym $sup+b exec brasero
-#bindsym $sup+c exec speedcrunch
-bindsym $sup+c exec wine "C:\\Program Files (x86)\\analogx\\PCalc\\pcalc.exe"
+#bindsym $sup+c exec wine "C:\\Program Files (x86)\\analogx\\Palc\\pcalc.exe"
+bindsym $sup+c exec speedcrunch
 #bindsym $sup+c exec urxvtc -e sage floating enable; resize shrink width 120 px; resize shrink height 50 px
 bindsym $sup+d exec cssh
-bindsym $sup+e exec thunderbird
+#bindsym $sup+e exec thunderbird
+bindsym $sup+e exec kmail
 bindsym $sup+f exec pcmanfm
 bindsym $sup+g exec gimp
 bindsym $sup+h exec hterm
@@ -321,16 +322,15 @@ bindsym $sup+k exec wireshark-qt -style=gtk
 bindsym $sup+l exec libreoffice
 bindsym $sup+m exec mixxx
 bindsym $sup+n exec xset -dpms && google-chrome-stable --kiosk && xset +dpms
-
 bindsym $sup+o exec /opt/ti/ccsv6/eclipse/ccstudio
 #bindsym $sup+p exec "xrandr --output DPI1 --auto && xrandr --output LVDS1 --off"
 bindsym $sup+p exec "xrandr --output DP1 --auto"
 bindsym $sup+Shift+p exec "xrandr --output eDP1 --auto && xrandr --output DP1 --off"
-bindsym $sup+q exec qtcreator
-bindsym $sup+r exec urxvtc -e ranger --selectfile=`xcwd`
-bindsym $sup+s exec "rofi -snow -bg '#2f4f4f' -fg '#ccdc90' -terminal urxvtc"
-bindsym $sup+t exec $psst ~/develop/scripts/start-teamviewer.sh
-#bindsym $sup+u exec $psst optirun uzbl-browser
+bindsym $sup+q exec qtcreator -style=gtk
+bindsym $sup+r exec urxvt -e ranger
+bindsym $sup+s exec "rofi -snow -bg '#2f4f4f' -fg '#ccdc90' -terminal urxvt"
+#bindsym $sup+t exec $psst ~/develop/scripts/start-teamviewer.sh
+bindsym $sup+u exec export LANG=de_CH.UTF-8 && fakturama
 bindsym $sup+v exec vlc
 #bindsym $sup+w exec chromium
 bindsym $sup+w exec firefox
@@ -339,8 +339,8 @@ bindsym $sup+y exec system-config-printer
 bindsym $sup+z exec filezilla
 
 bindsym $mod+Return exec urxvt
-bindsym $mod+Shift+Return exec urxvtc --chdir `xcwd`
-#bindsym $mod+Shift+Return exec urxvtc --chdir ${PWD}
+bindsym $mod+Shift+Return exec urxvt --chdir `xcwd`
+
 bindsym $sup+1 exec "urxvt -e forticlientsslvpn_cli --server vpn.bbzsogr.ch:443 --vpnuser cyril.andreatta"
 bindsym $sup+2 exec "rdesktop -f -g 100% -K -P -z -x l -a 16 -r sound:off -u 'GRAPH-TECH\can' gt-data02:3389"
 #bindsym $sup+3
