--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -13,9 +13,8 @@ general {
     color_good      = '#88b090'
     color_degraded  = '#ccdc90'
     color_bad       = '#e89393'
-    #separator_block_width = 25
     interval = 1
-    #separator = false
+    #separator_block_width = 25
 }
 
 order += "volume master"
@@ -33,7 +32,7 @@ order += "load"
 order += "tztime local"
 
 wireless wlp4s0 {
-    format_up = "%essid %ip  %quality"
+    format_up = " %quality %essid %ip"
     format_down = ""
 }
 
@@ -48,7 +47,7 @@ battery 0 {
     format_down = ""
     last_full_capacity = true
     integer_battery_capacity = true
-    low_threshold = 33
+    low_threshold = 11
     threshold_type = percentage
     hide_seconds = true
     status_chr = " "
@@ -65,7 +64,7 @@ run_watch VPN {
 }
 
 tztime local {
-    format = "%A %e.%B  %H:%M:%S"
+    format = "%A %e.%B %H:%M:%S"
 }
 
 load {
@@ -73,11 +72,11 @@ load {
 }
 
 cpu_usage {
-    format = " %usage "
+    format = " %usage"
 }
 
 cpu_temperature 0 {
-    format = " %degrees°C "
+format = " %degrees°C"
 }
 
 disk "/home" {
@@ -85,8 +84,8 @@ disk "/home" {
 }
 
 volume master {
-    format = " %volume"
-    format_muted = " %volume"
+    format = " %volume"
+    format_muted = " %volume"
     device = "default"
     mixer = "Master"
     mixer_idx = 0
